# positive-ai

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
data/: config.yaml
src/: __init__.py  cli.py
src/employee-guide/: cli.py
src/employee_guide/: cli.py  presentation.py
src/positive_ai/: __init__.py  __main__.py  cli.py  constants.py
src/positive_ai/documentation/: cli.py  community_deck.py  core_team_deck.py  data_model.py  employee_flyer.py  presentation.py  referent_starter_pack.py
src/positive_ai/email/: cli.py
src/positive_ai/employee_guide/: cli.py  presentation.py
src/positive_ai/templates/: 2024_09 Positive_AI_Flyer membres-template-en.pptx  2024_09_pai_members_flyer_template_fr.pptx  Ateliers-pai-trombinoscope-template.pptx  pai_slide_master.pptx
src/positive_ai/utils/: click.py  io.py  ppt.py
src/utils/: ppt.py
templates/: 2024_09 Positive_AI_Flyer membres-template-en.pptx  2024_09 Positive_AI_Flyer membres-template-fr.pptx
